[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pykeafortune"
version = "0.1.0"
description = "A Python package for generating horoscopes, fortunes, and lucky numbers."
authors = [
    { name = "James Hou", email = "jjh9584@nyu.edu" },
    { name = "Maya Felix", email = "Mxf4596@nyu.edu"},
    { name = "Larry Yang", email = "ly2380@nyu.edu"},
    { name = "Matthew Cheng", email = "mc9283@nyu.edu"}
]
requires-python = ">=3.11"
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["horoscope", "fortune", "lucky", "numbers", "generation", "fun"]

[project.urls]
"Homepage" = "https://github.com/software-students-spring2025/3-python-package-pyke-ult"
